# GhostPlayer

./: .gitignore  PLAN.md  REPORT.md  hello.py  pyproject.toml
app/: streamlit_viz.py
notebooks/: 01_download_and_process_kaggle_data.ipynb  02_process_2026_data.ipynb
src/ghostplayer/: __init__.py
src/ghostplayer/data/: __init__.py  bdb2026.py  build_graphs.py  build_sequences.py  legacy.py  load.py  preprocess.py
src/ghostplayer/eval/: __init__.py  error_analysis.py  inference.py  metrics.py
src/ghostplayer/models/: __init__.py  baseline.py  st_gat.py
src/ghostplayer/training/: __init__.py  losses.py  train_baseline.py  train_gnn.py
src/ghostplayer/utils/: __init__.py  config.py  schema.py
